--- a/NTV.Scraper/NTV.Scraper.csproj
+++ b/NTV.Scraper/NTV.Scraper.csproj
@@ -44,22 +44,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\Sites.cs" />
+    <Compile Include="Extensions\UriExtension.cs" />
     <Compile Include="HttpRequestExecutorService.cs" />
     <Compile Include="IHttpRequestExecutor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ScraperService.cs" />
     <Compile Include="Sites\IDankResource.cs" />
     <Compile Include="Sites\Imgur\Imgur.cs" />
-    <Compile Include="Sites\ISite.cs" />
-    <Compile Include="Sites\Reddit\Reddit.cs" />
+    <Compile Include="Sites\IScraper.cs" />
+    <Compile Include="Sites\IUriNavigator.cs" />
+    <Compile Include="Sites\RateLimit.cs" />
+    <Compile Include="Sites\Reddit\RedditJsonObject.cs" />
+    <Compile Include="Sites\Reddit\RedditScraper.cs" />
+    <Compile Include="Sites\Reddit\RedditNavigator.cs" />
     <Compile Include="Sites\Reddit\RedditResource.cs" />
     <Compile Include="SiteToScrape.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Extensions" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
